# HTMOS

./: .gitignore  Cargo.toml  LICENSE.TXT  README.md
bootloader-bios/: Cargo.toml  _x86.sh  clean.sh  i386-unknown-none.json  linker.ld  mount.sh  nope.txt  test.sh  x86.sh
bootloader-bios/.cargo/: config.toml
bootloader-bios/asm/: boot.asm  build.sh  stage2.asm
bootloader-bios/src/: lib.rs
bootloader-bios/x86/: burn.sh  mount.sh  x86.sh
bootloader-bios/x86/asm/: boot.asm
bootloader-bios/x86/long-mode/: Cargo.toml  linker.ld  todo.txt
bootloader-bios/x86/long-mode/.cargo/: config.toml
bootloader-bios/x86/long-mode/src/: kernel_loading.rs  main.rs
bootloader-bios/x86/protected-mode/: Cargo.toml  i386-unknown-none.json  linker.ld
bootloader-bios/x86/protected-mode/.cargo/: config.toml
bootloader-bios/x86/protected-mode/src/: kernel_loading.rs  long.rs  main.rs
bootloader-bios/x86/real-mode/: Cargo.toml  i386-unknown-none-code16.json  linker.ld
bootloader-bios/x86/real-mode/.cargo/: config.toml
bootloader-bios/x86/real-mode/src/: bios.rs  main.rs
bootloader-uefi/: Cargo.toml
bootloader-uefi/.cargo/: config.toml
bootloader-uefi/src/: bootinfo.rs  helper.rs  main.rs
builder/: Cargo.toml
builder/src/: main.rs
builder/src/os/: linux.rs  mod.rs  windows.rs
kernel/: .gitignore  Cargo.toml  i386-unknown-none.json  linker.ld
kernel/.cargo/: config.toml
kernel/build-scripts/: x86.sh  x86_64.sh
kernel/src/: api.rs  boot_info.rs  htmalloc.rs  kiss.rs  main.rs  raml.rs  x86_64_stuff.rs
kernel/src/api/: mod.rs
kernel/src/asm_entry_stub/: aarch64.s  arm.s  riscv32.s  riscv64.s  x86.s  x86_64.s
kernel/src/cfg_tbl/: mod.rs
kernel/src/kiss/: draw.rs  mod.rs
kernel/src/raml/: mod.rs
src/: ccsc.py  list1.txt  list1o.txt  list2.txt  list2o.txt  main.rs  ui.rs
src/console/: mod.rs  stdin.rs  stdout.rs
src/guids/: consts.rs  mod.rs
src/html/: ast.rs  html.lalrpop  mod.rs
src/kernel/: drivers.rs  klib.rs  mod.rs
