[package]
name = "my_r_efi_kernel"
version = "0.1.0"
edition = "2024"

[build-dependencies]
lalrpop = "0.22.2"

[dependencies]
heapless = "0.8.0"
lalrpop-util = { version = "0.22.2", default-features = false, features = ["unicode", "lexer"] }
linked_list_allocator = "0.10.5"
r-efi = "5.3.0"
typed-arena = { version = "2.0.2", default-features = false }
x86_64 = { version = "0.15.2", default-features = false, features = ["instructions"] }
