[package]
name = "htmkrnl"
version = "0.0.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
embedded-graphics = "0.8.1"
htmos-boot-info = "0.9.0"
libm = { version = "0.2.15", default-features = false }
logos = { version = "0.15.1", default-features = false, features = ["export_derive"] }
#ntfs = { version = "0.4.0", default-features = false }
r-efi = "5.3.0"
raw-acpi = "0.0.2"
stable-aml = "0.0.3"
tinybmp = "0.6.0"
ttf-parser = { version = "0.25.1", default-features = false, features=["no-std-float"] }
typed-arena = { version = "2.0.2", default-features = false }
widestring = { version = "1.2.1", default-features = false }
x86_64 = { version = "0.15.4", default-features = false, features = ["instructions"] }

[build-dependencies]
lalrpop = "0.22.2"
